--- a/Numerical/Numeric.html
+++ b/Numerical/Numeric.html
@@ -15,9 +15,8 @@ permalink: /Nm
   <h3>Strong Stability Preserving Runge Kutta</h3>
   <p>Integrates problems of the form</p>
   <p>In the code, coefficients are written using the Shu-Osher form</p>
-  <img src="<img src="https://latex.codecogs.com/svg.image?\large&space;\\&space;u^0&space;=&space;u^n\\&space;u^i&space;=&space;\sum_{j=0}^{i-1}(\alpha_{i,j}u^j&plus;\Delta&space;t\beta_{i,j}F(u^j)),&space;\quad&space;i&space;=&space;1,...,s\\&space;u^{n&plus;1}&space;=&space;u^s" title="https://latex.codecogs.com/svg.image?\large \\ u^0 = u^n\\ u^i = \sum_{j=0}^{i-1}(\alpha_{i,j}u^j+\Delta t\beta_{i,j}F(u^j)), \quad i = 1,...,s\\ u^{n+1} = u^s" />" alt="Shu-Osher form">
+  <img src="Shu-Osher form.svg" alt="Shu-Osher form">
 
-  
 
 
 </body>
