--- a/Numerical/Numeric.html
+++ b/Numerical/Numeric.html
@@ -15,7 +15,7 @@ permalink: /Nm
   <h3>Strong Stability Preserving Runge Kutta</h3>
   <p>Integrates problems of the form</p>
   <p>In the code, coefficients are written using the Shu-Osher form</p>
-  <img src="Shu-Osher_form.svg" alt="Shu-Osher form">
+  <img src="Images/Shu-Osher_form.svg" alt="Shu-Osher form">
 
 
 
