--- a/Numerical/Numeric.html
+++ b/Numerical/Numeric.html
@@ -8,14 +8,8 @@ permalink: /Nm
 </head>
 <body>
 
-<h1>Integrators</h1>
-  <h2>Runge Kutta</h2>
-  <h3>For 1st order ODEs</h3>
-  <p> .</p>
-  <h3>Strong Stability Preserving Runge Kutta</h3>
-  <p>Integrates problems of the form</p>
-  <p>In the code, coefficients are written using the Shu-Osher form</p>
-  <img src="Images/Shu-Osher_form.svg" alt="Shu-Osher form">
+<h1><a href="https://ys-314.github.io/Nm/ODEint">ODE Integrators</a></h1>
+
 
 
 
