--- a/Numerical/ODE Integrators.html
+++ b/Numerical/ODE Integrators.html
@@ -15,7 +15,8 @@ permalink: /Nm/ODEint
 <h2>Strong Stability Preserving Runge Kutta</h2>
 <p>Integrates problems of the form</p>
 <p>In the code, coefficients are written using the Shu-Osher form</p>
-<img src="https://github.com/YS-314/YS-314.github.io/blob/main/Images/Shu-Osher_form.svg" alt="Shu-Osher form">
+<img src="Images/Shu-Osher_form.svg" alt="Shu-Osher form">
+
   
   </body>
 </html>
